@@ -29,7 +29,7 @@
   <groupId>org.geonetwork-opensource</groupId>
   <artifactId>geonetwork</artifactId>
   <packaging>pom</packaging>
-  <version>4.2.4-SNAPSHOT</version>
+  <version>4.4.0-SNAPSHOT</version>
   <name>GeoNetwork opensource</name>
   <description>GeoNetwork opensource is a standards based, Free and
     Open Source catalog application to manage spatially referenced
@@ -108,7 +108,6 @@
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.1.2</version>
         </plugin>
@@ -123,17 +122,14 @@
           <version>3.3.3</version>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.3.0</version>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
           <version>3.1.2</version>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
         </plugin>
@@ -143,7 +139,6 @@
           <version>1.5.1</version>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
           <version>3.2.3</version>
         </plugin>
@@ -158,7 +153,6 @@
           <version>3.0.0</version>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
           <version>2.0</version>
         </plugin>
@@ -193,7 +187,6 @@
           -->
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
           <version>2.10</version>
           <executions>
@@ -216,7 +209,6 @@
           </configuration>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-eclipse-plugin</artifactId>
           <version>2.9</version>
         </plugin>
@@ -226,20 +218,19 @@
           <version>1.4.2</version>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
+          <groupId>com.ruleoftech</groupId>
+          <artifactId>markdown-page-generator-plugin</artifactId>
+          <version>2.4.0</version>
+        </plugin>
+        <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.1</version>
-          <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
-          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-assembly-plugin</artifactId>
           <version>3.3.0</version>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-antrun-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
@@ -248,7 +239,6 @@
           <version>3.0.0-M5</version>
         </plugin>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-toolchains-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
@@ -260,13 +250,17 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-          <compilerVersion>1.8</compilerVersion>
+          <source>11</source>
+          <target>11</target>
+          <compilerVersion>11</compilerVersion>
           <debug>true</debug>   <!-- Whether to include debugging information.   -->
           <encoding>UTF-8</encoding> <!-- The -encoding argument for the Java compiler. -->
-          <compilerArgument>-proc:none
-          </compilerArgument> <!-- disable automatic annotation processing accoring to: http://docs.jboss.org/hibernate/jpamodelgen/1.0/reference/en-US/html_single/#d0e261 -->
+          <compilerArgs>
+            <!-- disable automatic annotation processing according to: http://docs.jboss.org/hibernate/jpamodelgen/1.0/reference/en-US/html_single/#d0e261 -->
+            <arg>-proc:none</arg>
+            <arg>--add-exports</arg>
+            <arg>java.base/sun.net.ftp=ALL-UNNAMED</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
 
@@ -354,11 +348,30 @@
         <artifactId>jdom</artifactId>
         <version>1.1.2</version>
       </dependency>
+
       <dependency>
         <groupId>xalan</groupId>
         <artifactId>xalan</artifactId>
-        <version>2.7.1</version>
+        <version>2.7.3</version>
       </dependency>
+      <!-- because xalan 2.7.3 misses to declare its serializer dependency
+       we do it as an explicit dependency here and where it is declared
+       and needed, which is in:
+          core/pom.xml
+          web/pom.xml
+          common/pom.xml
+
+       This all can be removed once the following issue
+       has been resolved: https://issues.apache.org/jira/browse/XALANJ-2649
+       This is planned for the next xalan release. Note that xml-apis
+       and xercesImpl were already listed explicitly.
+      -->
+      <dependency>
+        <groupId>xalan</groupId>
+        <artifactId>serializer</artifactId>
+        <version>2.7.3</version>
+      </dependency>
+
       <dependency>
         <groupId>net.sf.saxon</groupId>
         <artifactId>saxon</artifactId>
@@ -386,17 +399,10 @@
           </exclusion>
         </exclusions>
       </dependency>
-
       <dependency>
         <groupId>org.jsoup</groupId>
         <artifactId>jsoup</artifactId>
         <version>1.15.3</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.codehaus.groovy</groupId>
-        <artifactId>groovy-all</artifactId>
-        <version>2.4.21</version>
       </dependency>
 
       <!-- universal character set detector -->
@@ -421,6 +427,13 @@
         <groupId>org.openrdf</groupId>
         <artifactId>sesame</artifactId>
         <version>1.2.7</version>
+        <exclusions>
+          <!-- Remove CVE-2022-45378 and do not break sesame usage. -->
+          <exclusion>
+            <groupId>soap</groupId>
+            <artifactId>soap</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.openrdf</groupId>
@@ -532,7 +545,7 @@
         <version>1.10</version>
       </dependency>
       <!-- logging -->
-      <dependency> 
+      <dependency>
         <!-- usedf for camel -->
         <!-- used for LDAP test dependency in core -->
         <groupId>org.apache.logging.log4j</groupId>
@@ -584,6 +597,13 @@
         <artifactId>xml-apis</artifactId>
         <version>1.4.01</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.yaml</groupId>
+        <artifactId>snakeyaml</artifactId>
+        <version>2.0</version>
+      </dependency>
+
 
       <!-- Patched XML Resolver 1.2 from apache xml-commons - fixes problems
                  with windows URLs -->
@@ -822,7 +842,7 @@
       <dependency>
         <groupId>org.tmatesoft.svnkit</groupId>
         <artifactId>svnkit</artifactId>
-        <version>1.10.9</version>
+        <version>1.10.11</version>
       </dependency>
       <dependency>
         <groupId>dlib</groupId>  <!--FIXME Handled by local repository -->
@@ -993,6 +1013,11 @@
         <version>${spring.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-expression</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-core</artifactId>
         <version>${spring.security.version}</version>
@@ -1091,6 +1116,11 @@
         <version>${hibernate.version}</version>
       </dependency>
       <dependency>
+        <groupId>net.sf.ehcache</groupId>
+        <artifactId>ehcache</artifactId>
+        <version>2.10.9.2</version>
+      </dependency>
+      <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-jpamodelgen</artifactId>
         <version>${hibernate.version}</version>
@@ -1119,7 +1149,7 @@
       <dependency>
         <groupId>com.google.code.findbugs</groupId>
         <artifactId>jsr305</artifactId>
-        <version>2.0.1</version>
+        <version>2.0.3</version>
       </dependency>
       <dependency>
         <groupId>net.sf.json-lib</groupId>
@@ -1155,12 +1185,12 @@
       <dependency>
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
-        <version>2.2.11</version>
+        <version>2.3.1</version>
       </dependency>
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
-        <version>2.2.11</version>
+        <version>2.3.1</version>
       </dependency>
       <dependency>
         <groupId>org.elasticsearch.client</groupId>
@@ -1197,6 +1227,42 @@
           <artifactId>diff-match-patch</artifactId>
           <version>1.2</version>
       </dependency>
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.3.2</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.chemistry.opencmis</groupId>
+        <artifactId>chemistry-opencmis-client-api</artifactId>
+        <version>1.1.0</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.chemistry.opencmis</groupId>
+        <artifactId>chemistry-opencmis-client-impl</artifactId>
+        <version>1.1.0</version>
+        <exclusions>
+          <exclusion>
+            <groupId>xml-resolver</groupId>
+            <artifactId>xml-resolver</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.jclouds</groupId>
+        <artifactId>jclouds-all</artifactId>
+        <version>2.3.0</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.amazonaws</groupId>
+        <artifactId>aws-java-sdk-s3</artifactId>
+        <version>1.12.261</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
@@ -1308,40 +1374,10 @@
     <module>messaging</module>
     <module>estest</module>
     <module>index</module>
+    <module>datastorages</module>
   </modules>
 
   <profiles>
-    <profile>
-      <!-- force use of java 8 if available in toolchains.xml -->
-      <id>toolchain</id>
-      <activation>
-        <file>
-          <exists>${user.home}/.m2/toolchains.xml</exists>
-        </file>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-toolchains-plugin</artifactId>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>toolchain</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <toolchains>
-                <jdk>
-                  <version>8</version>
-                </jdk>
-              </toolchains>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
     <profile>
       <id>with-doc</id>
       <modules>
@@ -1430,8 +1466,6 @@
     <application.name>geonetwork</application.name>
     <app.properties>WEB-INF/config.properties</app.properties>
     <!--<app.properties>file:/${geonetwork.dir}/config.properties</app.properties>-->
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
     <!-- Configure database config file to use. Could be
      h2, postgres, sqlserver, mysql, oracle, db2, postgres-postgis, jndi
      -->
@@ -1472,7 +1506,7 @@
      when watchlist notifier is triggered (Default 4AM) -->
     <savedselection.watchlist.frequency>0 0 4 * * ?</savedselection.watchlist.frequency>
 
-    <microservices.url></microservices.url>
+    <microservices.url/>
     <!--<microservices.url>http://localhost:9901</microservices.url>-->
 
     <!-- Proxy security configuration:
@@ -1510,17 +1544,18 @@
     Increase the value for large catalogue.
     TODO: Probably better to switch to scroll API for full indexing. -->
     <es.index.max_result_window.limit>15000</es.index.max_result_window.limit>
+    <es.index.max_inner_result_window.limit>200</es.index.max_inner_result_window.limit>
 
     <es.index.mapping.total_fields.limit>4000</es.index.mapping.total_fields.limit>
     <es.index.ignore_above>2000</es.index.ignore_above>
 
     <!-- If elasticsearch security is on,
     add a read/write user for index features and records: -->
-    <es.username></es.username>
-    <es.password></es.password>
+    <es.username/>
+    <es.password/>
     <!-- and a readonly user for index features access. -->
-    <es.ro.username></es.ro.username>
-    <es.ro.password></es.ro.password>
+    <es.ro.username/>
+    <es.ro.password/>
 
     <kb.platform>linux-x86_64</kb.platform>
     <kb.installer.extension>tar.gz</kb.installer.extension>
@@ -1528,7 +1563,7 @@
     <kb.url>http://localhost:${kb.port}</kb.url>
 
     <jms.url>tcp://localhost:61616</jms.url>
-    <activemq.version>5.6.0</activemq.version>
+    <activemq.version>5.7.0</activemq.version>
 
     <!-- Avoid to create any sessions for crawlers.
     Define the list of User-Agent to be considered as bot. -->
@@ -1544,7 +1579,7 @@
      request the list of hosts (but JPA cache db queries). -->
     <cors.allowedHosts>*</cors.allowedHosts>
 
-    <jetty.version>9.4.48.v20220622</jetty.version>
+    <jetty.version>9.4.52.v20230823</jetty.version>
     <jetty.file>jetty-distribution-${jetty.version}</jetty.file>
     <jetty.download>https://repo1.maven.org/maven2/org/eclipse/jetty/jetty-distribution/${jetty.version}/${jetty.file}.tar.gz</jetty.download>
 
@@ -1554,23 +1589,22 @@
     <jts.version>1.18.2</jts.version>
     <pg.version>42.3.3</pg.version>
 
-    <spring.version>5.2.20.RELEASE</spring.version>
-    <spring.security.version>5.7.3</spring.security.version>
-    <spring.jpa.version>2.2.13.RELEASE</spring.jpa.version>
+    <spring.version>5.3.27</spring.version>
+    <spring.security.version>5.8.3</spring.security.version>
+    <spring.jpa.version>2.7.12</spring.jpa.version>
     <springboot.version>2.7.0</springboot.version>
-    <springdoc.version>1.5.9</springdoc.version>
+    <springdoc.version>1.5.13</springdoc.version>
+    <hibernate.version>5.6.15.Final</hibernate.version>
 
     <metrics.version>2.2.0</metrics.version>
     <maven.build.timestamp.format>yyyy-MM-dd'T'HH'\:'mm'\:'ssZ</maven.build.timestamp.format>
     <build.timestamp>${maven.build.timestamp}</build.timestamp>
     <rootProjectDir>..</rootProjectDir>
-    <wro.version>1.7.9</wro.version>
+    <wro.version>1.10.1</wro.version>
     <wro.debug>true</wro.debug>
     <fop.version>2.7</fop.version>
-    <node.version>v8.11.1</node.version>
-    <npm.version>5.8.0</npm.version>
     <xmlunit.version>2.1.1</xmlunit.version>
-    <jackson.version>2.10.4</jackson.version>
+    <jackson.version>2.15.2</jackson.version>
     <flying-saucer>9.1.22</flying-saucer>
     <camel.version>2.25.1</camel.version>
     <log4j2.version>2.17.2</log4j2.version>
@@ -1580,7 +1614,6 @@
     <httpcomponents.version>4.5.14</httpcomponents.version>
     <jasypt.version>1.9.3</jasypt.version>
     <jupiter.version>5.9.1</jupiter.version>
-    <hibernate.version>5.6.7.Final</hibernate.version>
 
     <sonar.organization>geonetwork</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
